--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
    <link rel="shortcut icon" href="./weather.png">
 </head>
 <body>
-   <!-- <header>
-         <div class="header_inner">
-            <ul class="weather_list">
-               <li>Slobozhanske</li>
-               <li>Dnipro</li>
-               <li>Pidhorodne</li>
-            </ul>
-         </div>
-   </header> -->
    <main>
       <div class="container_item">
          <div class="item item1">
@@ -25,7 +16,7 @@
             <div class="temperature temperature1"></div>
             <div class="icon icon1"></div>
             <div class="clouds clouds1"></div>
-            <div class="wind wind1">1</div>
+            <div class="wind wind1"></div>
          </div>
          <div class="item item2">
             <div class="town town2"></div>
